RESOLVED FIXED128056
Subpixel rendering: LayoutUnit operator++ is broken.
https://bugs.webkit.org/show_bug.cgi?id=128056
Summary Subpixel rendering: LayoutUnit operator++ is broken.
alan
Reported 2014-02-01 19:06:59 PST
It defines post-increment only and implements it as if it was pre-increment.
Attachments
Patch (1.54 KB, patch)
2014-02-01 19:27 PST, alan
no flags
Patch (1.21 KB, patch)
2014-02-01 21:40 PST, alan
no flags
alan
Comment 1 2014-02-01 19:27:46 PST
Darin Adler
Comment 2 2014-02-01 21:17:05 PST
Comment on attachment 222899 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=222899&action=review > Source/WebCore/platform/LayoutUnit.h:197 > - LayoutUnit operator++(int) > + LayoutUnit& operator++() > { > m_value += kEffectiveFixedPointDenominator; > return *this; > } Great fix! > Source/WebCore/platform/LayoutUnit.h:204 > + LayoutUnit operator++(int) > + { > + LayoutUnit result = *this; > + ++(*this); > + return result; > + } Not sure we really need to add this, although I suppose it does little harm. On a separate note, if it was me I would have written ++*this without parentheses.
alan
Comment 3 2014-02-01 21:20:46 PST
(In reply to comment #2) > (From update of attachment 222899 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=222899&action=review > > > Source/WebCore/platform/LayoutUnit.h:197 > > - LayoutUnit operator++(int) > > + LayoutUnit& operator++() > > { > > m_value += kEffectiveFixedPointDenominator; > > return *this; > > } > > Great fix! > > > Source/WebCore/platform/LayoutUnit.h:204 > > + LayoutUnit operator++(int) > > + { > > + LayoutUnit result = *this; > > + ++(*this); > > + return result; > > + } > > Not sure we really need to add this, although I suppose it does little harm. Indeed! I guess we can add it back when it is actually needed. I'll land this without the post increment. Thanks!
alan
Comment 4 2014-02-01 21:40:48 PST
alan
Comment 5 2014-02-01 21:41:12 PST
Comment on attachment 222907 [details] Patch EWS testing
WebKit Commit Bot
Comment 6 2014-02-01 23:40:47 PST
Comment on attachment 222907 [details] Patch Clearing flags on attachment: 222907 Committed r163260: <http://trac.webkit.org/changeset/163260>
WebKit Commit Bot
Comment 7 2014-02-01 23:40:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.