Subpixel rendering: LayoutUnit operator++ is broken. https://bugs.webkit.org/show_bug.cgi?id=128056

Reviewed by Darin Adler.

Add pre-increment operator++.

* platform/LayoutUnit.h:
(WebCore::LayoutUnit::operator++):


Canonical link: https://commits.webkit.org/146078@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163260 268f45cc-cd09-0410-ab3c-d52691b4dbfc